--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,10 @@
 # backend/.env.example
-# Postgres
+# Postgres (used by the app and by default for everything)
 DATABASE_URL=postgresql://postgres:postgres@127.0.0.1:5432/ai_interviewer
+
+# Separate DB for tests (recommended). If set, npm run test uses this and never touches DATABASE_URL.
+# Create it first: createdb ai_interviewer_test
+# TEST_DATABASE_URL=postgresql://postgres:postgres@127.0.0.1:5432/ai_interviewer_test
 
 # Auth (ops)
 JWT_SECRET=change-me-in-real-env
