prep for vercel + render deployment

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -16,6 +16,9 @@ OPS_ADMIN_PASSWORD=ops-admin-password
 # Base URL for invite links (used in POST /api/interview-invites response)
 INVITE_BASE_URL=http://localhost:3000
 
+# CORS: comma-separated frontend origins (production only)
+# FRONTEND_ORIGIN=https://yourapp.vercel.app
+
 # Assistant (OpenAI)
 OPENAI_API_KEY=
 OPENAI_MODEL=gpt-4.1-mini
